-work on workshop page -fix for scrollbar on events page

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3818,27 +3818,60 @@ section.directory article.person{
     height: 100vh;
     top: 0em;
 
+    &::-webkit-scrollbar {
+      -webkit-appearance: none;
+      width: 7px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      border-radius: 4px;
+      background-color: rgba(0, 0, 0, .5);
+      box-shadow: 0 0 1px rgba(255, 255, 255, .5);
+    }
+
+    ul {
+        margin-left: 0;
+        li {
+          border-radius: 6px;
+          -webkit-border-radius: 4px;
+          -moz-border-radius: 4px;
+          border: 1px solid white;
+          background-color: #dbeedc;
+          box-sizing: border-box;
+          list-style: none;
+          line-height: 1.3;
+          font-size: 1.2em;
+          font-weight: 400;
+          font-family: $titleFont;
+          color: $primary;
+          text-align: center;
+          padding: .5em;
+          &:hover {
+            transition: background-color .1s;
+            background-color: #c9e6cb; }
+        }
+    }
   }
-  #newsSidebar ul {
-    margin-left: 0; }
-  #newsSidebar ul li {
-    border-radius: 6px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    border: 1px solid white;
-    background-color: #dbeedc;
-    box-sizing: border-box;
-    list-style: none;
-    line-height: 1.3;
-    font-size: 1.2em;
-    font-weight: 400;
-    font-family: $titleFont;
-    color: $primary;
-    text-align: center;
-    padding: .5em; }
-  #newsSidebar ul li:hover {
-    transition: background-color .1s;
-    background-color: #c9e6cb; }
+  // #newsSidebar ul {
+  //   margin-left: 0; }
+  // #newsSidebar ul li {
+  //   border-radius: 6px;
+  //   -webkit-border-radius: 4px;
+  //   -moz-border-radius: 4px;
+  //   border: 1px solid white;
+  //   background-color: #dbeedc;
+  //   box-sizing: border-box;
+  //   list-style: none;
+  //   line-height: 1.3;
+  //   font-size: 1.2em;
+  //   font-weight: 400;
+  //   font-family: $titleFont;
+  //   color: $primary;
+  //   text-align: center;
+  //   padding: .5em; }
+  // #newsSidebar ul li:hover {
+  //   transition: background-color .1s;
+  //   background-color: #c9e6cb; }
 
   #eventsContainer {
     -moz-box-sizing: border-box;
